jwt-auth/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://identity.default.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: simple-app
                port:
                  number: 9000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: simple-app
                port:
                  number: 9000
