jwt-auth/identity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-proxy
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 9000
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 9000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 9000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 9000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 9000
